# hft-lowlatency-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
01_modern_cpp_basics/: CMakeLists.txt  TEMPLATES.md  move_semantics.cpp  templates.cpp
02_ring_buffer/: CMakeLists.txt  LEARNINGS.md
02_ring_buffer/include/: ring_buffer.hpp
02_ring_buffer/src/: ring_buffer_benchmark.cpp
03_memory_pool/: CMakeLists.txt
03_memory_pool/docs/: DESIGN.md
03_memory_pool/include/: memory_pool.hpp
03_memory_pool/src/: memory_pool_benchmark.cpp  memory_pool_example.cpp
04_smart_pointers/: CMakeLists.txt
04_smart_pointers/docs/: SHARED_PTR.md  SUMMARY.md  UNIQUE_PTR.md
04_smart_pointers/include/: shared_ptr.hpp  unique_ptr.hpp  weak_ptr.hpp
04_smart_pointers/src/: minimal_test.cpp  smart_ptr_demo.cpp
05_atomics/: CMakeLists.txt  QUICK_START.md  README.md
05_atomics/docs/: ATOMIC_OPERATIONS.md  LEARNINGS.md
05_atomics/include/: atomic_examples.hpp
05_atomics/src/: atomic_benchmark.cpp  atomic_demo.cpp
hft-lowlatency-cpp/: CMakeLists.txt  hft-lowlatency-cpp.cpp  hft-lowlatency-cpp.h
itch_ouch_system/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PROGRESS.md
itch_ouch_system/include/book/: order_book.hpp  seqlock.hpp
itch_ouch_system/include/common/: types.hpp
itch_ouch_system/include/itch/: messages.hpp
itch_ouch_system/include/network/: moldudp64.hpp
itch_ouch_system/src/book/: order_book.cpp
itch_ouch_system/tests/: CMakeLists.txt  test_itch_messages.cpp  test_itch_messages_comprehensive.cpp  test_moldudp64.cpp  test_order_book.cpp  test_seqlock.cpp
itch_ouch_system/tools/: CMakeLists.txt  replay_feed.cpp
